flux/cluster/multimedia/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: media
spec:
  stripPrefix:
    prefixes:
      - /transmission
    forceSlash: true
