flux/cluster/multimedia/jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:latest
          securityContext:
            privileged: true
          ports:
            - containerPort: 8096
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data/media
            - name: hardware-transcoding
              mountPath: /dev/dri
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: media
          hostPath:
            path: /var/media
            type: Directory
        - name: hardware-transcoding
          hostPath:
            path: /dev/dri
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
    - port: 8096
      targetPort: http
      name: http
