flux/cluster/multimedia/transmission.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
        - name: transmission
          image: lscr.io/linuxserver/transmission:latest
          ports:
            - containerPort: 9091
              name: webui
            - containerPort: 51413
              name: bittorrent
              protocol: TCP
            - containerPort: 51413
              name: bittorrent-udp
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /downloads
            - name: webui
              mountPath: /webui
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: transmission-config
        - name: media
          hostPath:
            path: /var/media
            type: Directory
        - name: webui
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: transmission
  ports:
    - port: 9091
      targetPort: webui
      name: webui
