flux/cluster/multimedia/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multimedia-ingress
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: media-strip-prefix@kubernetescrd, sso-keycloak-auth@kubernetescrd
spec:
  tls:
    - hosts:
        - homelab.nobeledgar3.cloud
      secretName: homelab-tls
  rules:
    - host: homelab.nobeledgar3.cloud
      http:
        paths:
          - path: /jellyfin
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
          - path: /transmission
            pathType: Prefix
            backend:
              service:
                name: transmission
                port:
                  number: 9091
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multimedia-bypass-ingress
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - homelab.nobeledgar3.cloud
      secretName: homelab-tls
  rules:
    - host: homelab.nobeledgar3.cloud
      http:
        paths:
          - path: /jellyfin/Users
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
          - path: /jellyfin/System
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
          - path: /jellyfin/Sessions
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
          - path: /jellyfin/Playback
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
          - path: /jellyfin/DisplayPreferences
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
          - path: /jellyfin/socket
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
